--- a/gradle.properties
+++ b/gradle.properties
@@ -11,5 +11,7 @@ arrow_version=1.0.1
 gson_version=2.8.9
 # Kodein
 kodein_version=7.9.0
+# Jackson
+jackson_version=2.13.0
 # Mockk
 mockk_version=1.12.1
