Added a clean step to the pipeline

--- a/.github/workflows/opencpms.yml
+++ b/.github/workflows/opencpms.yml
@@ -24,6 +24,9 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
 
+      - name: Clean
+        run: ./gradlew clean
+
       - name: License check
         run: ./gradlew license
 
