pass config via DI, simplify ktor application setup routine, switch to netty

--- a/ocpp16j-endpoint/src/main/resources/application.conf
+++ b/ocpp16j-endpoint/src/main/resources/application.conf
@@ -1,16 +1,13 @@
-app {
-    hostname = "0.0.0.0"
+ktor {
+  deployment {
     port = 9090
+  }
 
-    basicAuth {
-        enabled = false
-    }
+  application {
+    modules = [io.opencpms.ocpp16j.endpoint.ApplicationKt.main]
+  }
+}
 
-    tls {
-        enabled = false
-#         keyStorePath = "src/test/resources/keystore.jks",
-#         keyStorePassword = "bar",
-#         privateKeyAlias = "sample",
-#         privateKeyPassword = "foo"
-    }
+basicAuth {
+  enabled = false
 }
