--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
+# ----------------------------------
+# IntelliJ
+# ----------------------------------
+.idea
+*.iml
+out
+
+# ----------------------------------
+# Gradle
+# ----------------------------------
 .gradle
 build
-.idea/
-*.iml
