--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,27 @@
+kotlin.code.style=official
+
+# -----------------------------------------------
+# VERSIONS
+# -----------------------------------------------
 # Misc
 jvmPluginVersion=1.6.20
+
 # Ktor
 ktor_version=1.6.8
 kotlin_version=1.6.20
 logback_version=1.2.3
-kotlin.code.style=official
+
 # Arrow
 arrow_version=1.0.1
+
 # GSON
-gson_version=2.8.9
+gson_version=2.9.0
+
 # Kodein
-kodein_version=7.9.0
+kodein_version=7.11.0
+
 # Jackson
-jackson_version=2.13.0
+jackson_version=2.13.2
+
 # Mockk
-mockk_version=1.12.1
+mockk_version=1.12.3
