fix gradle version variable names and remove not needed ones

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,25 +3,11 @@ kotlin.code.style=official
 # -----------------------------------------------
 # VERSIONS
 # -----------------------------------------------
-# Misc
-jvmPluginVersion=1.6.20
-
-# Ktor
-ktor_version=1.6.8
-kotlin_version=1.6.20
-logback_version=1.2.3
-
-# Arrow
-arrow_version=1.0.1
-
-# GSON
-gson_version=2.9.0
-
-# Kodein
-kodein_version=7.11.0
-
-# Jackson
-jackson_version=2.13.2
-
-# Mockk
-mockk_version=1.12.3
+kotlinVersion=1.6.20
+ktorVersion=1.6.8
+logbackVersion=1.2.3
+arrowVersion=1.0.1
+gsonVersion=2.9.0
+kodeinVersion=7.11.0
+jacksonVersion=2.13.2
+mockkVersion=1.12.3
