--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,10 @@ kotlin.code.style=official
 # -----------------------------------------------
 # VERSIONS
 # -----------------------------------------------
+jvmTarget=1.8
 kotlinVersion=1.6.20
 ktorVersion=1.6.8
-logbackVersion=1.2.3
+log4jVersion=2.17.2
 arrowVersion=1.0.1
 gsonVersion=2.9.0
 kodeinVersion=7.11.0
