rabbit configuration, rabbit test container in unit tests, clean ups

--- a/cpms/src/main/resources/application.conf
+++ b/cpms/src/main/resources/application.conf
@@ -7,3 +7,16 @@ ktor {
     modules = [io.opencpms.cpms.ApplicationKt.main]
   }
 }
+
+rabbit {
+  user = "guest"
+  user = ${?RABBIT_USER}
+  password = "guest"
+  password = ${?RABBIT_PASSWORD}
+  host = "localhost"
+  host = ${?RABBIT_HOST}
+  port = "5672"
+  port = ${?RABBIT_PORT}
+  connectionName = "cpms"
+  connectionName = ${?RABBIT_CONNECTION_NAME}
+}
