clean up gradle dependencies

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,8 +7,12 @@ jvmTarget=1.8
 kotlinVersion=1.6.20
 ktorVersion=1.6.8
 log4jVersion=2.17.2
+lmaxDisruptorVersion=3.4.2
 arrowVersion=1.0.1
 kodeinVersion=7.11.0
 jacksonVersion=2.13.2
 mockkVersion=1.12.3
 amqpClientVersion=5.9.0
+testContainersVersion=1.16.3
+jsonAssertVersion=1.5.0
+docileChargePointVersion=0.6.0
